# pr-tracker

./: .env.example  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  package.yml  release.yml
src/: App.css  App.tsx  github.ts  index.css  llm.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
src/components/: AddPRModal.tsx  CIHeatmap.tsx  FailureTimeline.tsx  HealthDashboard.tsx  PRList.tsx
src/types/: index.ts
